app_manifest/istio_virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demoapp
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - demoapp-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: demoapp  
        port:
          number: 80
